--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -23,7 +23,7 @@
 }
 
 .cargo {
-    background: #3123e3;
+    background: #fff;
     background: cover no-repeat;
     background-position: center;
     width: 100%;
