--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -24,6 +24,7 @@
 
 .cargo {
     background: #fff;
+    color: #171717;
     background: cover no-repeat;
     background-position: center;
     width: 100%;
